Fixing tab spacing
git-svn-id: https://plugins.svn.wordpress.org/templ33t/branches/01_db_config@415163 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/templ33t.css
+++ b/templ33t.css
@@ -91,10 +91,6 @@ div#templ33t_control ul li {
 	border-radius: 4px 4px 0px 0px;
 }
 
-div#templ33t_control ul li:last-child {
-	margin-right: -6px;
-}
-
 div#templ33t_control ul li.templ33t_settings {
 	float: right;
 }
